bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd.apps.myocp.sandbox1018.opentlc.com"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
